# regexperience

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/core/: errors.h  match.h  regexperience.h
include/internal/common/: helpers.h
include/internal/lexical_analysis/: lexeme.h  lexer.h  token.h
include/internal/semantic_analysis/: analyzer.h  ast_node_factory.h
include/internal/semantic_analysis/ast_nodes/: alternation.h  anchor.h  ast_node.h  binary_operator.h  concatenation.h  constant.h  empty.h  quantification.h  range.h  unary_operator.h
include/internal/state_machines/: composite_state.h  fsm.h  fsm_convertible.h  fsm_initializable.h  fsm_modifiable.h  state.h  state_factory.h
include/internal/state_machines/acceptors/: acceptor_runnable.h  dfa.h  epsilon_nfa.h  nfa.h
include/internal/state_machines/transducers/: mealy.h  transducer_runnable.h
include/internal/state_machines/transitions/: deterministic_transition.h  mealy_transition.h  nondeterministic_transition.h  transition.h  transition_factory.h
include/internal/syntactic_analysis/: bnf.txt  derivation_item.h  grammar.h  occurrence.h  parser.h  parsing_table_key.h  production.h  rule.h
include/internal/syntactic_analysis/symbols/: non_terminal.h  symbol.h  terminal.h
regexperience_cli/: CMakeLists.txt  main.c
regexperience_core/: CMakeLists.txt
regexperience_core/include/core/: errors.h  regexperience.h
regexperience_core/include/internal/common/: helpers.h  macros.h
regexperience_core/include/internal/lexical_analysis/: lexer.h  token.h
regexperience_core/include/internal/semantic_analysis/: analyzer.h  ast_node_factory.h
regexperience_core/include/internal/semantic_analysis/ast_nodes/: alternation.h  ast_node.h  binary_operator.h  bracket_expression.h  concatenation.h  constant.h  quantification.h  range.h  unary_operator.h
regexperience_core/include/internal/state_machines/: composite_state.h  fsm.h  fsm_convertible.h  fsm_initializable.h  fsm_modifiable.h  state.h  state_factory.h  state_machine_convertible.h  state_machine_initializable.h  state_machine_modifiable.h  state_machine_runnable.h
regexperience_core/include/internal/state_machines/acceptors/: acceptor.h  acceptor_runnable.h  dfa.h  epsilon_nfa.h  nfa.h
regexperience_core/include/internal/state_machines/transducers/: mealy.h  transducer_runnable.h
regexperience_core/include/internal/state_machines/transitions/: deterministic_transition.h  mealy_transition.h  nondeterministic_transition.h  transition.h  transition_factory.h
regexperience_core/include/internal/syntactic_analysis/: bnf.txt  derivation_item.h  grammar.h  lexeme.h  lexer.h  parser.h  parsing_table_key.h  production.h  rule.h  token.h
regexperience_core/include/internal/syntactic_analysis/grammar/: bnf.txt  grammar.h  production.h
regexperience_core/include/internal/syntactic_analysis/grammar/symbols/: non_terminal.h  symbol.h  terminal.h
regexperience_core/include/internal/syntactic_analysis/symbols/: non_terminal.h  symbol.h  terminal.h
regexperience_core/src/: regexperience.c
regexperience_core/src/common/: helpers.c
regexperience_core/src/lexical_analysis/: lexeme.c  lexer.c  token.c
regexperience_core/src/semantic_analysis/: analyzer.c  ast_node_factory.c
regexperience_core/src/semantic_analysis/ast_nodes/: alternation.c  ast_node.c  binary_operator.c  bracket_expression.c  concatenation.c  constant.c  quantification.c  range.c  unary_operator.c
regexperience_core/src/state_machines/: composite_state.c  fsm.c  fsm_initializable.c  fsm_modifiable.c  state.c  state_factory.c  state_machine_convertible.c  state_machine_initializable.c  state_machine_modifiable.c  state_machine_runnable.c
regexperience_core/src/state_machines/acceptors/: acceptor.c  acceptor_runnable.c  dfa.c  epsilon_nfa.c  nfa.c
regexperience_core/src/state_machines/transducers/: mealy.c  transducer_runnable.c
regexperience_core/src/state_machines/transitions/: deterministic_transition.c  mealy_transition.c  nondeterministic_transition.c  transition.c  transition_factory.c
regexperience_core/src/syntactic_analysis/: derivation_item.c  grammar.c  lexeme.c  lexer.c  parser.c  parsing_table_key.c  production.c  rule.c  token.c
regexperience_core/src/syntactic_analysis/grammar/: grammar.c  production.c  rule.c
regexperience_core/src/syntactic_analysis/grammar/symbols/: non_terminal.c  symbol.c  terminal.c
regexperience_core/src/syntactic_analysis/symbols/: non_terminal.c  symbol.c  terminal.c
src/: match.c  regexperience.c
src/common/: helpers.c
src/lexical_analysis/: lexeme.c  lexer.c  token.c
src/semantic_analysis/: analyzer.c  ast_node_factory.c
src/semantic_analysis/ast_nodes/: alternation.c  anchor.c  binary_operator.c  concatenation.c  constant.c  empty.c  quantification.c  range.c  unary_operator.c
src/state_machines/: composite_state.c  fsm.c  fsm_convertible.c  fsm_initializable.c  fsm_modifiable.c  state.c  state_factory.c
src/state_machines/acceptors/: acceptor_runnable.c  dfa.c  epsilon_nfa.c  nfa.c
src/state_machines/transducers/: mealy.c  transducer_runnable.c
src/state_machines/transitions/: deterministic_transition.c  mealy_transition.c  nondeterministic_transition.c  transition.c  transition_factory.c
src/syntactic_analysis/: derivation_item.c  grammar.c  occurrence.c  parser.c  parsing_table_key.c  production.c  rule.c
src/syntactic_analysis/symbols/: non_terminal.c  symbol.c  terminal.c
